Agregada clase utility para almacenar constantes de excepciones, cambio de Stream.collection() a Stream.toList(), y eliminacion de codigo innecesario o duplicado